2001-02-14  Jeffrey Oldham  <oldham@codesourcery.com>

	* gcc.c (do_spec_1): Fix off-by-one error for '%M' case.

2001-02-14  Richard Henderson  <rth@redhat.com>

	* regclass.c (init_reg_sets_1): Revert last change.

2001-02-14  Nathan Sidwell  <nathan@codesourcery.com>

	* extend.texi (Deprecated): Deprecate new initializer lists.

2001-02-14  Nathan Sidwell  <nathan@codesourcery.com>

	* mkdeps.c (deps_add_default_target): Robustify. Add
	basename component only.
	* cpp.texi (-M): Describe how default target is generated.
	* invoke.texi (-M): Likewise.

2001-02-13  Zack Weinberg  <zack@wolery.stanford.edu>

	* ggc-common.c (ggc_mark_rtx_children): No need to mark 'S' or
	's' slots in RTXen.
	* ggc-page.c, ggc-simple.c (ggc_mark_if_gcable): Delete function.
	* ggc.h (ggc_mark_if_gcable): Delete prototype.

Wed Feb 14 01:03:14 CET 2001  Jan Hubicka  <jh@suse.cz>

	* regclass.c (init_reg_sets_1): Optimize calculation of move_cost
	arrays.

Tue Feb 13 07:52:04 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* config/sparc/sparc.c (function_value): Treat all non-record
	aggregate types like used to treat UNION_TYPE.

2001-02-13  Alexandre Oliva  <aoliva@redhat.com>

	* combine.c (UWIDE_SHIFT_LEFT_BY_BITS_PER_WORD): New macro.
	(try_combine): Use it.

2001-02-13  Richard Henderson  <rth@redhat.com>

	* sparc.md (cmp_cc_arith_op_set): Don't use match_dup on the
	entire operator; replicate that and match_dup the operands.
	(cmp_ccx_arith_op_set): Likewise.
	(cmp_cc_arith_op_not_set): Likewise.
	(cmp_ccx_arith_op_not_set): Likewise.

2001-02-12  Jakub Jelinek  <jakub@redhat.com>

	* c-common.c (constant_fits_type_p): New function.
	(convert_and_check): Use it.

2001-02-11  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.in (GXX_ABI_FLAG): Don't define.
	* configure.in (--enable-new-gxx-abi): Remove option.
	* config.in: Regenerated.
	* configure: Likewise.

2001-02-12  Alexandre Oliva  <aoliva@redhat.com>
